2007-08-08  Edward Hervey  <edward@fluendo.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gnonlin/0.10.9.xml:
	* src/htdocs/releases/gnonlin/Makefile.am:
	Release 0.10.9 of GNonLin.

2007-08-03  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.14.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.14.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	Release 0.10.14 of Core & Base.

2007-08-01  Edward Hervey  <bilboed@bilboed.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-python/0.10.8.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	Releasing 0.10.8 of the Python Bindings.

2007-07-17  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/documentation/Makefile.am:
	  Improve the build.
	
	* src/htdocs/download/index.xml:
	  Fix xml breakage.

2007-07-17  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/download/index.xml:
	  Add windows download links.

	* src/htdocs/features/index.xml:
	  Slighly update. More needed.

2007-07-05  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/documentation/index.xml:
	  Add link to design docs.

2007-06-19  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/news/news.xml:
	Fix link to the 0.10.5 Bad tarball

2007-06-19  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-bad/0.10.5.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.6.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.10.6.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:
	Release 0.10.6 of Good/Ugly and 0.10.5 of Bad

2007-06-13  Stefan Kost  <ensonic@users.sf.net>

	* src/htdocs/download/index.xml: