@@ -10,6 +10,8 @@
     <component>gstreamer+%28core%29</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.15</milestone>
+      <milestone>0.10.14</milestone>
       <milestone>0.10.13</milestone>
       <milestone>0.10.12</milestone>
       <milestone>0.10.11</milestone>
@@ -62,6 +64,8 @@
     <component>gst-plugins-base</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.15</milestone>
+      <milestone>0.10.14</milestone>
       <milestone>0.10.13</milestone>
       <milestone>0.10.12</milestone>
       <milestone>0.10.11</milestone>
@@ -90,6 +94,7 @@
     <component>gst-plugins-good</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.7</milestone>
       <milestone>0.10.6</milestone>
       <milestone>0.10.5</milestone>
       <milestone>0.10.4</milestone>
@@ -111,6 +116,8 @@
     <component>gst-plugins-ugly</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.7</milestone>
+      <milestone>0.10.6</milestone>
       <milestone>0.10.5</milestone>
       <milestone>0.10.4</milestone>
       <milestone>0.10.3</milestone>
@@ -131,6 +138,7 @@
     <component>gst-plugins-bad</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.6</milestone>
       <milestone>0.10.5</milestone>
       <milestone>0.10.4</milestone>
       <milestone>0.10.3</milestone>
@@ -166,6 +174,8 @@
     <component>gst-python</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.9</milestone>
+      <milestone>0.10.8</milestone>
       <milestone>0.10.7</milestone>
       <milestone>0.10.6</milestone>
       <milestone>0.10.5</milestone>
@@ -215,6 +225,13 @@
     <component>gnonlin</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.10</milestone>
+      <milestone>0.10.9</milestone>
+      <milestone>0.10.8</milestone>
+      <milestone>0.10.7</milestone>
+      <milestone>0.10.6</milestone>
+      <milestone>0.10.5</milestone>
+      <milestone>0.10.4</milestone>
       <milestone>0.10.3</milestone>
       <milestone>0.10.2</milestone>
       <milestone>0.10.1</milestone>
