@@ -1,3 +1,8 @@
+2007-09-19  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/htdocs/bugs/bugs.xml:
+	  Update milestones in bug list.
+
 2007-08-08  Edward Hervey  <edward@fluendo.com>
 
 	* src/htdocs/entities.gst:
